# hugr

./: .gitignore  AGENTS.md  ANDROID_AGENT_MARKETPLACE.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  HUGR_WASM_PLAN.md  PROGRESS.md  PYTHON_RUNTIME_API_PLAN.md  README.md  REPOSITORY_AUDIT.md  model_configuration_assessment.md  naming_suggestions.md  new_ideas.md  plan.md
bindings/python/: README.md  pyproject.toml
bindings/python/python/huggr_agents/: __init__.py  _native.pyi  _types.py
bindings/python/python/hugr_agents/: __init__.py  _native.pyi  _types.py
bindings/python/tests/: mock_server.py  test_agent.py
crates/baton-cli/: Cargo.toml
crates/baton-cli/src/: main.rs
crates/baton-core/: Cargo.toml
crates/baton-core/src/: brain.rs  command.rs  event.rs  lib.rs  model.rs  policy.rs  primitives.rs  record.rs  state.rs
crates/baton-core/tests/: determinism.rs  scripted_session.rs  sub_agents.rs
crates/baton-core/tests/common/: mod.rs
crates/baton-example-plugin/: Cargo.toml
crates/baton-example-plugin/src/: main.rs
crates/baton-example-plugin/tests/: e2e.rs
crates/baton-host/: Cargo.toml
crates/baton-host/src/: agent.rs  capability.rs  coalesce.rs  engine.rs  frontend.rs  lib.rs  model.rs  plugins.rs  policy.rs
crates/baton-host/src/capabilities/: blob.rs  fs.rs  http.rs  mod.rs  shell.rs
crates/baton-host/tests/: end_to_end.rs
crates/baton-plugin-abi/: Cargo.toml
crates/baton-plugin-abi/src/: lib.rs  protocol.rs  subprocess.rs  transport.rs  wasm.rs
crates/baton-providers/: Cargo.toml
crates/baton-providers/src/: lib.rs  openai.rs
crates/baton-providers/tests/: retry.rs  streaming.rs
crates/baton-replay/: Cargo.toml
crates/baton-replay/src/: blob.rs  lib.rs  replay.rs
crates/baton-replay/tests/: blob_store.rs  roundtrip.rs
crates/baton-wasm/: Cargo.toml  build-extension.sh
crates/baton-wasm/extension/: DEMOS.md  README.md  background.js  manifest.json  options.html  options.js  sidepanel.html  sidepanel.js  styles.css
crates/baton-wasm/extension/host/: config.js  engine.js  model.js  schemas.js  tools.js
crates/baton-wasm/extension/wasm/: baton_wasm.js  baton_wasm_bg.wasm
crates/baton-wasm/src/: lib.rs
crates/huggr-core/: Cargo.toml
crates/huggr-core/src/: brain.rs  event.rs  lib.rs  model.rs  policy.rs  primitives.rs  record.rs  state.rs
crates/huggr-core/tests/: cancellation.rs  concurrent_ops.rs  determinism.rs  scripted_session.rs
crates/huggr-host/: Cargo.toml
crates/huggr-host/src/: capability.rs  engine.rs  framing.rs  frontend.rs  lib.rs  mcp.rs  model.rs
crates/huggr-host/tests/: end_to_end.rs
crates/huggr-providers/: Cargo.toml
crates/huggr-providers/src/: lib.rs  openai.rs
crates/huggr-providers/tests/: retry.rs  streaming.rs
crates/huggr-replay/: Cargo.toml
crates/huggr-replay/src/: blob.rs  lib.rs  replay.rs  test_support.rs
crates/huggr-replay/tests/: blob_store.rs  replay.rs  roundtrip.rs
crates/huggr-toolkit/: Cargo.toml
crates/huggr-toolkit/reference/: huggr.toml
crates/huggr-toolkit/src/: build.rs  build_python.rs  bundle.rs  cron.rs  lib.rs  manifest.rs  mcp_serve.rs  models.rs  python_bridge.rs  runtime.rs  runtime_args.rs  scaffold.rs  schema_py.rs  stats.rs  surface.rs  traces.rs
crates/huggr-toolkit/tests/: build_cli.rs  build_python.rs  conformance.rs  external_tools.rs  reference_manifest.rs
crates/huggr-wasm/: Cargo.toml
crates/huggr-wasm/src/: capabilities.rs  config.rs  exports.rs  lib.rs  session.rs
crates/hugr-agent/: Cargo.toml
crates/hugr-agent/schemas/: answer.schema.json  ask.schema.json
crates/hugr-agent/src/: agent.rs  agent_tool.rs  analytics.rs  blobs.rs  contract.rs  lib.rs  limits.rs  memory.rs  scratch.rs  skills.rs  store.rs
crates/hugr-agent/tests/: agent_as_tool.rs  analytics.rs  answer_extra.rs  blobs.rs  concurrent_asks.rs  contract.rs  events.rs  feedback.rs  introspection.rs  limits.rs  memory.rs  resource_groups.rs  resume_fork.rs  scratchpad.rs  storage.rs  store.rs
crates/hugr-cli/: Cargo.toml
crates/hugr-cli/src/: main.rs
crates/hugr-core/: Cargo.toml
crates/hugr-core/src/: brain.rs  command.rs  event.rs  lib.rs  model.rs  policy.rs  primitives.rs  record.rs  state.rs
crates/hugr-core/tests/: ask_user.rs  cancellation.rs  concurrent_ops.rs  determinism.rs  scripted_session.rs  sub_agents.rs
crates/hugr-docs/: Cargo.toml  README.md  SYSTEM.md  hugr.toml  pyproject.toml
crates/hugr-docs/definition/: SYSTEM.md  hugr.toml  response.schema.json
crates/hugr-docs/src/: lib.rs  main.rs  python.rs
crates/hugr-python/: Cargo.toml
crates/hugr-python/src/: capability.rs  config.rs  lib.rs
crates/hugr-replay/: Cargo.toml
crates/hugr-replay/src/: blob.rs  lib.rs  replay.rs  test_support.rs
crates/hugr-replay/tests/: blob_store.rs  replay.rs  roundtrip.rs
crates/hugr-sqlite-2/tools/: Cargo.toml
crates/hugr-toolkit/: Cargo.toml
crates/hugr-toolkit/reference/: hugr.toml
crates/hugr-toolkit/src/: build.rs  build_python.rs  bundle.rs  cron.rs  lib.rs  manifest.rs  mcp_serve.rs  runtime.rs  runtime_args.rs  scaffold.rs  schema_py.rs  stats.rs  surface.rs  traces.rs
crates/hugr-toolkit/tests/: build_cli.rs  build_python.rs  conformance.rs  reference_manifest.rs
crates/hugr-wasm/: Cargo.toml  README.md  SYSTEM.md  hugr.toml
crates/hugr-wasm/extension/: DEMOS.md  README.md  agent_driver.js  build.sh  chrome_api.js  content_script.js  openai_adapter.js  options.html  options.js  sidepanel.html  sidepanel.js  styles.css
crates/hugr-wasm/src/: capabilities.rs  config.rs  exports.rs  lib.rs  session.rs
examples/huglet-datasmith/: Cargo.toml  README.md  SYSTEM.md  huggr.toml
examples/huglet-datasmith/src/: lib.rs
examples/huglet-docs/: Cargo.toml  README.md  SYSTEM.md  huggr.toml
examples/huglet-docs/src/: lib.rs
examples/hugr-datasmith/: Cargo.toml  README.md  SYSTEM.md  hugr.toml
examples/hugr-datasmith/src/: lib.rs
huglets/hf-docs-huglet/: AGENTS.md  Cargo.toml  README.md  SYSTEM.md  huggr.toml
huglets/hf-docs-huglet/research/: README.md  pyproject.toml
huglets/hf-docs-huglet/src/: lib.rs
(+249 files in other folders)
