[workspace]
resolver = "3"
members = [
    "crates/hugr-core",
    "crates/hugr-host",
    "crates/hugr-providers",
    "crates/hugr-replay",
    "crates/hugr-agent",
    "crates/hugr-toolkit",
    "crates/hugr-docs",
]

# Crate layout (see docs/ARCHITECTURE.md §10): `hugr-core` is the pure, sans-IO
# brain; every other crate is a host layer and may touch IO — never `hugr-core`.

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hugr-rs/hugr"
rust-version = "1.85"

[workspace.dependencies]
# Pure data (used by hugr-core too).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Host-side (IO/runtime) deps — never used by hugr-core.
hugr-core = { path = "crates/hugr-core" }
hugr-host = { path = "crates/hugr-host" }
hugr-providers = { path = "crates/hugr-providers" }
hugr-replay = { path = "crates/hugr-replay" }
hugr-agent = { path = "crates/hugr-agent" }
hugr-toolkit = { path = "crates/hugr-toolkit" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
# Content-addressed blob hashing (host-side persistence; never in hugr-core).
sha2 = "0.10"
# base64 for inline blob transport on the Ask/Answer contract (host-side; §18.3).
base64 = "0.22"

# Release profile leaning toward the "tiny footprint" goal (ARCHITECTURE §11).
# NOTE: `panic = "abort"` is intentionally NOT set here — it conflicts with the
# unwinding test harness (`cargo test --release`). It belongs in a WASM-specific
# profile in Phase 4, where module size is actually validated.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
