[package]
name = "baton-cli"
description = "The Baton showcase CLI: a batteries-included terminal agent."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "baton"
path = "src/main.rs"

[dependencies]
baton-core = { workspace = true }
baton-host = { workspace = true }
baton-providers = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
