[package]
name = "baton-host"
description = "Default native host for Baton: tokio driver loop, capabilities, policy and a stdout front-end."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
baton-core = { workspace = true }
# The content-addressed BlobStore (disk-backed) lives in the persistence crate;
# the host wraps it in an ordinary Capability. baton-core is untouched.
baton-replay = { workspace = true }
# The plugin ABI: the host wraps a loaded plugin's tools as ordinary Capabilities.
baton-plugin-abi = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "sync"] }
