[package]
name = "baton-replay"
description = "Versioned, portable trace format for persisting and reconstructing Baton sessions."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# baton-core is pure data here: we serialize its Event/LogEntry types. This crate
# is a *host-side persistence* crate — it MAY touch the filesystem (std::fs). That
# does NOT make baton-core impure; the IO lives only here. (ARCHITECTURE §10/§12.)
baton-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
