[package]
name = "huggr-host"
description = "Default native host for Huggr: tokio driver loop, capabilities, policy and a stdout front-end."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
huggr-core = { workspace = true }
# The content-addressed BlobStore (disk-backed) lives in the persistence crate;
# the host wraps it in an ordinary Capability. huggr-core is untouched.
huggr-replay = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "sync"] }
