[package]
name = "hugr-cli"
description = "The Hugr showcase CLI: a batteries-included terminal agent."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "hugr"
path = "src/main.rs"

[dependencies]
hugr-core = { workspace = true }
hugr-host = { workspace = true }
hugr-providers = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
