[package]
name = "hugr-core"
description = "The sans-IO, pure-reducer brain of the Hugr agent harness."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# serde/serde_json are pure data — no IO, no runtime. They carry the opaque
# `Value` payloads and make the log/trace serializable.
serde = { workspace = true }
serde_json = { workspace = true }
