[package]
name = "hugr-docs"
description = "A read-only Hugr docs retrieval CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "hugr_docs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "hugr-docs"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
hugr-core = { workspace = true }
hugr-agent = { workspace = true }
hugr-host = { workspace = true }
hugr-providers = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pyo3 = { version = "0.25", optional = true, features = ["extension-module", "abi3-py39"] }
