[package]
name = "hugr-docs"
description = "Typed response contract for the reference Hugr documentation agent."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "hugr_docs"

[dependencies]
tokio = { workspace = true }
hugr-toolkit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
