[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "hugr-docs"
version = "0.0.2"
description = "Python bindings for the Hugr docs retrieval host."
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }

[tool.maturin]
bindings = "pyo3"
features = ["python"]
module-name = "hugr_docs"
