[package]
name = "hugr-python"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hugr-rs/hugr"
description = "PyO3 embedding of the Hugr subagent runtime: define agents and tools in Python, run on the Rust runtime."

# Deliberately outside the root workspace: building this crate requires a
# Python toolchain (maturin drives it from bindings/python).
[workspace]

[lib]
name = "hugr_python"
crate-type = ["cdylib"]

[dependencies]
hugr-core = { path = "../hugr-core" }
hugr-host = { path = "../hugr-host" }
hugr-agent = { path = "../hugr-agent" }
hugr-toolkit = { path = "../hugr-toolkit" }
serde = "1"
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
