[package]
name = "hugr-datasmith"
description = "Typed response contract for the docs-QA synthetic dataset agent."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "hugr_datasmith"

[dependencies]
serde = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
